# zero2prod

./: .dockerignore  .gitlab-ci.yml  Cargo.toml  Containerfile  configuration.yaml  spec.yaml
.cargo/: config.toml
.github/workflows/: general.yml
.sqlx/: query-541a14fb26ec3a69040c24de8970963b7b4e6961d53e99a520068d46836f1027.json  query-9fa97d6ae7ce2c0a2a5ad18cf0a60123d6432c81b8e29cae0b7ed862adfffe8a.json  query-a00b9ba5641078266d469ca4374e636dab1e6741441501f384a1a94f53c70489.json  query-ba40f6c4e49a8b8a44552abe2834f3626c7b6ab2b7f7e772b2cb6976da400799.json  query-c7196afddc75fc9aaf54f0ea2d33177ade8ef7ace11f715c48fd796ed8ee26dc.json
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20240214153353_create_subscriptions_table.sql  20240407064230_seed_user.sql
scripts/: init_db.sh  init_redis.sh
scripts/git-hooks/: pre-commit
src/: app_state.rs  authentication.rs  configuration.rs  email_client.rs  issue_delivery_worker.rs  lib.rs  main.rs  request_id.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: extract.rs  middleware.rs  mod.rs  password.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs  subscription.rs  subscription_status.rs  subscription_token.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: health_check.rs  home.rs  mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/newsletters/: get.rs  mod.rs  post.rs
src/routes/admin/password/: action.rs  form.rs  get.rs  mod.rs  post.rs
src/routes/login/: action.rs  form.rs  get.rs  mod.rs  post.rs
src/session/: extract.rs  middleware.rs  mod.rs
templates/: welcome.html
templates/web/: base.html  change_password_form.html  dashboard.html  home.html  login_form.html  newsletter_form.html
tests/: health_check.rs  subscriptions.rs
tests/api/: admin_dashboard.rs  admin_newsletters.rs  admin_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/util/: mod.rs
